[gd_scene load_steps=28 format=3 uid="uid://c2noldww8g5st"]

[ext_resource type="Script" path="res://Scripts/GameObjectScripts/ship.gd" id="1_6jg18"]
[ext_resource type="Script" path="res://Scripts/GameObjectScripts/CombatAI/BehaviorTree/bt_root.gd" id="2_2s0ta"]
[ext_resource type="Script" path="res://Scripts/GameObjectScripts/CombatAI/BehaviorTree/Composite/bt_selector.gd" id="3_22nr0"]
[ext_resource type="Script" path="res://Scripts/GameObjectScripts/CombatAI/BehaviorTree/Composite/bt_sequence.gd" id="4_us7ks"]
[ext_resource type="Script" path="res://Scripts/GameObjectScripts/CombatAI/BehaviorTree/BehaviorPool/is_target_available.gd" id="5_52fvx"]
[ext_resource type="Script" path="res://Scripts/GameObjectScripts/CombatAI/BehaviorTree/BehaviorPool/initialize_threat_detection.gd" id="5_c5frp"]
[ext_resource type="Script" path="res://Scripts/GameObjectScripts/CombatAI/BehaviorTree/BehaviorPool/face_target.gd" id="7_dy2uw"]
[ext_resource type="Script" path="res://Scripts/GameObjectScripts/CombatAI/BehaviorTree/BehaviorPool/move_into_range.gd" id="8_238fx"]
[ext_resource type="Script" path="res://Scripts/GameObjectScripts/CombatAI/BehaviorTree/BehaviorPool/toggle_shields.gd" id="9_65omj"]
[ext_resource type="Script" path="res://Scripts/GameObjectScripts/CombatAI/BehaviorTree/BehaviorPool/choose_target.gd" id="11_jlol5"]
[ext_resource type="Texture2D" uid="uid://bpdt55pm4f7di" path="res://Art/ShipArt/prototype9_v2.png" id="12_gfp81"]
[ext_resource type="Texture2D" uid="uid://c750umbh4ihc6" path="res://Art/ShipArt/prototype9v1_livery.png" id="13_yfhmf"]
[ext_resource type="PackedScene" uid="uid://cydvqlraj4ugp" path="res://Scenes/CompositeGameObjects/WeaponSlot.tscn" id="14_b3w6e"]
[ext_resource type="Script" path="res://Scripts/GameObjectScripts/shield_slot.gd" id="15_v5h3f"]
[ext_resource type="Resource" uid="uid://ljuoksbuwwam" path="res://Resources/WeaponMounts/MediumBallistic.tres" id="15_xrkcv"]
[ext_resource type="Texture2D" uid="uid://btjg68do6pthc" path="res://Art/CombatGUIArt/ManualControlHUDArt/bar_starsector.png" id="16_ytqsg"]
[ext_resource type="Texture2D" uid="uid://bw66f1712lt43" path="res://Art/CombatGUIArt/ManualControlHUDArt/flux_pip.png" id="17_1mm86"]
[ext_resource type="Theme" uid="uid://bka1x3hcxtfcg" path="res://ThemesandFonts/Themes/CombatGUITheme.tres" id="18_ib3ga"]
[ext_resource type="Texture2D" uid="uid://doewdp3hp2q71" path="res://Art/CombatGUIArt/ManualControlHUDArt/combatHUDdetail.png" id="19_bky77"]
[ext_resource type="Texture2D" uid="uid://d4hbj5jccdfk5" path="res://Art/CombatGUIArt/ship_targetted.png" id="20_mdaov"]
[ext_resource type="Texture2D" uid="uid://cey2s4hiuicmi" path="res://Art/CombatGUIArt/TacticalMapArt/manual_control_indicator.png" id="21_51e01"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4lqs1"]
radius = 0.01

[sub_resource type="CircleShape2D" id="CircleShape2D_vu5jp"]

[sub_resource type="Gradient" id="Gradient_nks55"]
offsets = PackedFloat32Array(0.237705, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_47ww1"]
gradient = SubResource("Gradient_nks55")
width = 10

[sub_resource type="Gradient" id="Gradient_lqjnm"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_17qoa"]
gradient = SubResource("Gradient_lqjnm")
width = 10

[node name="TestShip" type="RigidBody2D"]
z_as_relative = false
collision_mask = 15
input_pickable = true
gravity_scale = 0.0
center_of_mass_mode = 1
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_6jg18")

[node name="CombatBehaviorTree" type="Node" parent="."]
script = ExtResource("2_2s0ta")

[node name="main2" type="Node" parent="CombatBehaviorTree"]
script = ExtResource("3_22nr0")

[node name="threat detection" type="Node" parent="CombatBehaviorTree/main2"]
script = ExtResource("4_us7ks")

[node name="initialize threat detection" type="Node" parent="CombatBehaviorTree/main2/threat detection"]
script = ExtResource("5_c5frp")

[node name="target enemy" type="Node" parent="CombatBehaviorTree/main2"]
script = ExtResource("4_us7ks")

[node name="is target available" type="Node" parent="CombatBehaviorTree/main2/target enemy"]
script = ExtResource("5_52fvx")

[node name="choose target" type="Node" parent="CombatBehaviorTree/main2/target enemy"]
script = ExtResource("11_jlol5")

[node name="attack enemy" type="Node" parent="CombatBehaviorTree/main2/target enemy"]
script = ExtResource("3_22nr0")

[node name="face target" type="Node" parent="CombatBehaviorTree/main2/target enemy/attack enemy"]
script = ExtResource("7_dy2uw")

[node name="move into range" type="Node" parent="CombatBehaviorTree/main2/target enemy/attack enemy"]
script = ExtResource("8_238fx")

[node name="toggle shields" type="Node" parent="CombatBehaviorTree/main2/target enemy/attack enemy"]
script = ExtResource("9_65omj")

[node name="ShipSprite" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("12_gfp81")

[node name="ShipLivery" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.686275)
rotation = 1.5708
texture = ExtResource("13_yfhmf")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(30, -4)
polygon = PackedVector2Array(52, 0, 36, -37, 5, -58, -30, -75, -49, -73, -53.3076, -57.858, -76, -56, -90, -44, -103, -33, -105, -20, -82, -13, -82, 8, -102, 18, -106, 32, -80, 57, -49, 57, -48, 74, -28, 78, 8, 63, 37, 34)

[node name="RepathArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
priority = 1

[node name="RepathShape" type="CollisionShape2D" parent="RepathArea"]
shape = SubResource("CircleShape2D_4lqs1")
debug_color = Color(0, 0.6, 0.701961, 0.0823529)

[node name="WeaponSlot0" parent="." instance=ExtResource("14_b3w6e")]
position = Vector2(-24, -30)
weapon_mount = ExtResource("15_xrkcv")

[node name="WeaponSlot1" parent="." instance=ExtResource("14_b3w6e")]
position = Vector2(-24, 30)
weapon_mount = ExtResource("15_xrkcv")

[node name="WeaponSlot2" parent="." instance=ExtResource("14_b3w6e")]
position = Vector2(66, 0)
weapon_mount = ExtResource("15_xrkcv")

[node name="WeaponSlot3" parent="." instance=ExtResource("14_b3w6e")]
position = Vector2(60, 21)

[node name="WeaponSlot4" parent="." instance=ExtResource("14_b3w6e")]
position = Vector2(60, -29)

[node name="WeaponSlot5" parent="." instance=ExtResource("14_b3w6e")]
position = Vector2(38, -46)

[node name="WeaponSlot6" parent="." instance=ExtResource("14_b3w6e")]
position = Vector2(38, 38)

[node name="ShipNavigationAgent" type="NavigationAgent2D" parent="."]
path_desired_distance = 50.0
target_desired_distance = 100.0
path_max_distance = 50.0
avoidance_enabled = true
radius = 70.0
max_neighbors = 4
time_horizon_agents = 5.0
time_horizon_obstacles = 1.0
max_speed = 1000.0
debug_use_custom = true
debug_path_custom_color = Color(0.913757, 0, 0.203475, 1)
debug_path_custom_point_size = 13.0
debug_path_custom_line_width = 3.0

[node name="NavigationTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="ShieldSlot" type="Node2D" parent="."]
script = ExtResource("15_v5h3f")

[node name="Shields" type="Area2D" parent="ShieldSlot"]
collision_layer = 0
collision_mask = 8
input_pickable = false

[node name="ShieldShape" type="CollisionShape2D" parent="ShieldSlot/Shields"]
shape = SubResource("CircleShape2D_vu5jp")
debug_color = Color(0.203922, 0.639216, 0, 0.0862745)

[node name="CenterCombatHUD" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ConstantSizedGUI" type="Control" parent="CenterCombatHUD"]
modulate = Color(0.486275, 0.843137, 0.294118, 0.784314)
z_index = 3
z_as_relative = false
anchors_preset = 0

[node name="HardFluxIndicator" type="TextureProgressBar" parent="CenterCombatHUD/ConstantSizedGUI"]
physics_interpolation_mode = 0
texture_filter = 1
layout_mode = 0
offset_left = 71.0
offset_top = -80.0
offset_right = 171.0
offset_bottom = -70.0
scale = Vector2(0.75, 0.75)
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_47ww1")

[node name="SoftFluxIndicator" type="TextureProgressBar" parent="CenterCombatHUD/ConstantSizedGUI/HardFluxIndicator"]
physics_interpolation_mode = 0
show_behind_parent = true
texture_filter = 1
layout_mode = 0
offset_right = 100.0
offset_bottom = 10.0
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_47ww1")

[node name="BarOutliner" type="TextureRect" parent="CenterCombatHUD/ConstantSizedGUI/HardFluxIndicator"]
layout_mode = 0
offset_top = -2.0
offset_right = 102.0
offset_bottom = 12.0
texture = ExtResource("16_ytqsg")
stretch_mode = 2

[node name="FluxPip" type="TextureRect" parent="CenterCombatHUD/ConstantSizedGUI/HardFluxIndicator"]
layout_mode = 0
offset_left = -2.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 14.0
texture = ExtResource("17_1mm86")

[node name="Label" type="Label" parent="CenterCombatHUD/ConstantSizedGUI/HardFluxIndicator"]
texture_filter = 1
layout_mode = 0
offset_left = -54.6667
offset_top = -2.66667
offset_right = 4.33333
offset_bottom = 18.3333
theme = ExtResource("18_ib3ga")
theme_override_font_sizes/font_size = 10
text = "FLUX"

[node name="HullIntegrityIndicator" type="TextureProgressBar" parent="CenterCombatHUD/ConstantSizedGUI"]
physics_interpolation_mode = 0
texture_filter = 1
layout_mode = 0
offset_left = 71.0
offset_top = -63.0
offset_right = 171.0
offset_bottom = -53.0
scale = Vector2(0.75, 0.75)
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_17qoa")

[node name="BarOutLiner2" type="TextureRect" parent="CenterCombatHUD/ConstantSizedGUI/HullIntegrityIndicator"]
layout_mode = 0
offset_top = -2.0
offset_right = 104.0
offset_bottom = 12.0
texture = ExtResource("16_ytqsg")
stretch_mode = 2

[node name="Label" type="Label" parent="CenterCombatHUD/ConstantSizedGUI/HullIntegrityIndicator"]
texture_filter = 1
layout_mode = 0
offset_left = -54.6667
offset_top = -2.66667
offset_right = 5.33329
offset_bottom = 21.3333
theme = ExtResource("18_ib3ga")
theme_override_font_sizes/font_size = 10
text = "HULL"

[node name="IndicatorDecor" type="TextureRect" parent="CenterCombatHUD/ConstantSizedGUI"]
self_modulate = Color(1, 1, 1, 0.588235)
layout_mode = 0
offset_top = -48.0
offset_right = 130.0
offset_bottom = -8.0
scale = Vector2(1.2, 1.2)
texture = ExtResource("19_bky77")
stretch_mode = 2

[node name="ShipTargetIcon" type="TextureRect" parent="CenterCombatHUD"]
physics_interpolation_mode = 0
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("20_mdaov")

[node name="ManualControlIndicator" type="TextureRect" parent="CenterCombatHUD"]
physics_interpolation_mode = 0
texture_filter = 1
layout_mode = 0
offset_right = 34.0
offset_bottom = 30.0
texture = ExtResource("21_51e01")

[node name="TacticalMapIcon" type="TextureButton" parent="CenterCombatHUD"]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -36.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_filter = 2
action_mode = 0
button_mask = 0
stretch_mode = 0

[connection signal="velocity_computed" from="ShipNavigationAgent" to="." method="_on_ShipNavigationAgent_velocity_computed"]
[connection signal="timeout" from="NavigationTimer" to="." method="_on_NavigationTimer_timeout"]
