[gd_scene load_steps=4 format=3 uid="uid://by1g6emke1cfw"]

[ext_resource type="Script" path="res://Scripts/ship.gd" id="1_htvtf"]
[ext_resource type="Texture2D" uid="uid://cdfm6vdba6pnn" path="res://Art/ShipArt/fighter.png" id="2_wjry0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4lqs1"]
radius = 70.0

[node name="PlayerShip" type="RigidBody2D"]
position = Vector2(600, 350)
collision_mask = 7
input_pickable = true
gravity_scale = 0.0
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_htvtf")

[node name="ShipSprite" type="Sprite2D" parent="."]
self_modulate = Color(0.101362, 0.395403, 0.613697, 1)
rotation = 1.5708
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_wjry0")
offset = Vector2(0, -50)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(58, 0, -45, -53, -45, 53)

[node name="ShipNavigationAgent" type="NavigationAgent2D" parent="."]
path_desired_distance = 50.0
target_desired_distance = 100.0
path_max_distance = 50.0
avoidance_enabled = true
radius = 70.0
time_horizon_agents = 5.0
time_horizon_obstacles = 1.0
max_speed = 1000.0
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0.913757, 0, 0.203475, 1)
debug_path_custom_point_size = 13.0
debug_path_custom_line_width = 3.0

[node name="NavigationTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 7
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_4lqs1")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="velocity_computed" from="ShipNavigationAgent" to="." method="_on_ShipNavigationAgent_velocity_computed"]
[connection signal="timeout" from="NavigationTimer" to="." method="_on_NavigationTimer_timeout"]
